<resources>
    <string name="app_name">VirtualBov</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="search_hint">Type name…</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_cadastro_raca">CadastroRacaActivity</string>

    <string name="title_home">Home</string>
    <string name="title_animais">Animais</string>
    <string name="title_financeiro">Financeiro</string>
    <string name="title_nutricao">Nutrição</string>
    <string name="title_simulador">Simulador</string>
</resources>